<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">


<!--
    <view
    class="com.artgameweekend.projects.art.draw.BrushDialog$ColorPickerView"
    id="@+id/color_picker"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" />
-->
    <TableLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1">

        <TableRow>
            <TextView
            android:layout_column="1"
            android:text="@string/label_color_intensity" />
            <TextView
            android:id="@+id/color_intensity"
            android:text="10"
            android:gravity="right" />
        </TableRow>
    </TableLayout>
    <SeekBar android:id="@+id/seek_intensity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="100" />
    <TableLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1">

        <TableRow>
            <TextView
            android:layout_column="1"
            android:text="@string/label_brush_size" />
            <TextView
            android:id="@+id/brush_size"
            android:text="10"
            android:gravity="right" />
        </TableRow>
    </TableLayout>
    <SeekBar android:id="@+id/seek_brush_size"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="100" />
    <TableLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1">

        <TableRow>
            <TextView
            android:layout_column="1"
            android:text="@string/label_emboss" />
            <CheckBox android:id="@+id/toggleEmboss"
            android:gravity="right"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button_ok"
        android:text="@string/button_ok"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
