<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" style="@style/tagLayout"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_gravity="center">"

<RelativeLayout android:id="@+id/preferences_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:text="@string/preferences_title" style="@style/tagTextTitle"
              android:id="@+id/preferences_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="left"
              android:layout_margin="10dip" />

    <TextView android:text="@string/preferences_browser_title" style="@style/tagTextTitle"
              android:id="@+id/preferences_browser_title"
              android:layout_below="@id/preferences_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="left"
              android:layout_margin="10dip" />

    <TextView android:text="@string/preferences_browser" style="@style/tagTextNormal"
              android:id="@+id/preferences_browser_label"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignBottom="@+id/preferences_browser"
              android:layout_alignTop="@+id/preferences_browser"
              android:gravity="center"
              android:layout_marginLeft="10dip" />

    <EditText android:text="" style="@style/tagEditText"
              android:id="@+id/preferences_browser"
              android:layout_height="wrap_content"
              android:layout_alignParentRight="true"
              android:layout_below="@id/preferences_browser_title"
              android:editable="false"
              android:focusable="false"
              android:gravity="center"
              android:layout_width="150dip" />



    <Button android:id="@+id/preferences_change_browser_button"
            android:text="@string/preferences_change_browser"
            android:layout_below="@id/preferences_browser"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dip"
            android:layout_width="150dip" />



</RelativeLayout>
</LinearLayout>